# openapis.ca-dodp

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cve-scan.yml  release.yml  sbom.yml  test.yml
src/openapi_dodp/: __init__.py  client.py  config.py  plugin.py  sessions.py
src/openapis_ca_dodp/: __init__.py  client.py  config.py  plugin.py  sessions.py
tests/: conftest.py  test_client.py  test_integration.py  test_plugin.py
