[project]
name = "openapi-dodp"
version = "0.10.1"
description = "Hummingbird plugin that proxies to a DAISY Online Delivery Protocol (DODP) backend"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
# `hummingbird` is intentionally NOT a runtime dependency: this
# plugin is meant to be installed into an existing hummingbird
# container/venv, where hummingbird is already on PYTHONPATH.
# Listing it here would force `pip install openapi-dodp` to
# resolve a package that is not on PyPI. Same pattern as nnels.
dependencies = [
  "httpx>=0.27",
  "lxml>=5.3",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
]

# Register the plugin so hummingbird's entry-point discovery
# picks it up. Operators set HUMMINGBIRD_PLUGIN=openapi_dodp
# in their env to switch the active plugin to this one.
[project.entry-points."hummingbird.plugins"]
openapi_dodp = "openapi_dodp.plugin:OpenapiDodpPlugin"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "ruff>=0.7",
  # Local dev needs hummingbird available so the plugin's import
  # of `hummingbird.plugins.Plugin` resolves; production runs
  # against the hummingbird that already lives in the image.
  "hummingbird",
]

[tool.uv.sources]
hummingbird = { path = "../hummingbird", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openapi_dodp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.coverage.run]
source = ["src/openapi_dodp"]
branch = true

[tool.coverage.report]
# Floor sits a few points below current (~82%) so a small dip
# doesn't block merges, but a structural regression (>10pt drop)
# fails CI. The gap is mostly auth-fault recovery branches in
# the plugin that need a per-hook fault test each; bump once
# those tests land.
fail_under = 78
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "pragma: no cover",
]
